fix some wrong